fix: magane scrollbars have transparent color

--- a/src/modules/plugins-compatibility/magane.scss
+++ b/src/modules/plugins-compatibility/magane.scss
@@ -1,4 +1,5 @@
 @charset "utf-8";
+@import "../variables";
 
 /** Magane plugin **/
 
@@ -28,6 +29,6 @@ div#magane {
   }
 
   .simplebar-scrollbar::before {
-    background-color: var(--accent-color) !important
+    background-color: #{$accent-color} !important
   }
 }
